# fairest_translate_demo

./: .gitignore  README.md  demo.sh  demo_makedata.sh  pyproject.toml
